Closed
Bug 640064
Opened 15 years ago
Closed 15 years ago
crash [@ libc.so@0x1c25e] going to about:support crashes ideos s7
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
RESOLVED
FIXED
mozilla5
| Tracking | Status | |
|---|---|---|
| fennec | - | --- |
People
(Reporter: kbrosnan, Assigned: bjacob)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
|
90 bytes,
text/plain
|
Details | |
|
718 bytes,
patch
|
jrmuizel
:
review+
pavlov
:
approval2.0+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-5377da55-87ba-4077-9446-cbf962110308 .
=============================================================
Firefox mobile completely crashes when visiting about:support on the Ideos s7 tablet.
| Reporter | ||
Updated•15 years ago
|
blocking2.0: ? → ---
tracking-fennec: --- → ?
| Reporter | ||
Comment 1•15 years ago
|
||
Build id 20110308121615
0 libc.so libc.so@0x1c25e
1 libxul.so mozilla::gl::GLContext::InitWithPrefix gfx/thebes/GLContext.h:2073
2 libxul.so mozilla::gl::GLContextEGL::Init gfx/thebes/GLContextProviderEGL.cpp:677
3 libxul.so mozilla::gl::GLContextEGL::CreateEGLPBufferOffscreenContext gfx/thebes/GLContextProviderEGL.cpp:1892
4 libxul.so mozilla::gl::GLContextProviderEGL::CreateOffscreen gfx/thebes/GLContextProviderEGL.cpp:2092
5 libxul.so mozilla::WebGLContext::SetDimensions nsAutoPtr.h:954
6 libxul.so mozilla::widget::GfxInfoWebGL::GetWebGLParameter widget/src/xpwidgets/GfxInfoWebGL.cpp:74
7 libxul.so mozilla::widget::GfxInfoBase::GetWebGLParameter widget/src/xpwidgets/GfxInfoBase.cpp:615
8 libxul.so NS_InvokeByIndex_P xpcom/reflect/xptcall/src/md/unix/xptcinvoke_arm.cpp:199
9 libxul.so XPCWrappedNative::CallMethod js/src/xpconnect/src/xpcwrappednative.cpp:3124
10 libxul.so XPC_WN_CallMethod js/src/xpconnect/src/xpcwrappednativejsops.cpp:1613
11 libxul.so js::Interpret js/src/jsinterp.cpp:4801
12 libxul.so js::Invoke js/src/jsinterp.cpp:653
13 libxul.so js::ExternalInvoke js/src/jsinterp.cpp:863
14 libxul.so JS_CallFunctionValue js/src/jsapi.cpp:5173
15 libxul.so nsJSContext::CallEventHandler dom/base/nsJSEnvironment.cpp:1915
16 libxul.so nsJSEventListener::HandleEvent dom/src/events/nsJSEventListener.cpp:230
17 libxul.so nsEventListenerManager::HandleEventSubType content/events/src/nsEventListenerManager.cpp:1127
18 libxul.so nsEventListenerManager::HandleEventInternal content/events/src/nsEventListenerManager.cpp:1222
19 libxul.so nsEventTargetChainItem::HandleEvent content/events/src/nsEventListenerManager.h:146
20 libxul.so nsEventTargetChainItem::HandleEventTargetChain content/events/src/nsEventDispatcher.cpp:343
21 libxul.so nsEventDispatcher::Dispatch content/events/src/nsEventDispatcher.cpp:630
22 libxul.so DocumentViewerImpl::LoadComplete layout/base/nsDocumentViewer.cpp:1072
23 libxul.so nsDocShell::EndPageLoad docshell/base/nsDocShell.cpp:6087
24 libxul.so nsDocShell::OnStateChange nsCOMPtr.h:492
25 libxul.so nsDocLoader::FireOnStateChange uriloader/base/nsDocLoader.cpp:1318
26 libxul.so nsDocLoader::doStopDocumentLoad uriloader/base/nsDocLoader.cpp:953
27 libxul.so nsDocLoader::DocLoaderIsEmpty uriloader/base/nsDocLoader.cpp:820
28 libxul.so nsDocLoader::OnStopRequest uriloader/base/nsDocLoader.cpp:706
29 libxul.so nsLoadGroup::RemoveRequest netwerk/base/src/nsLoadGroup.cpp:680
30 libxul.so nsDocument::DoUnblockOnload nsCOMPtr.h:492
31 libxul.so nsDocument::UnblockOnload content/base/src/nsDocument.cpp:7328
32 libxul.so nsDocument::DispatchContentLoadedEvents nsCOMPtr.h:492
33 libxul.so nsRunnableMethodImpl<void , true>::Run nsThreadUtils.h:347
34 libxul.so nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:633
35 libxul.so NS_ProcessNextEvent_P nsThreadUtils.cpp:250
36 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:111
37 libxul.so MessageLoop::RunInternal ipc/chromium/src/base/message_loop.cc:220
38 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:512
39 libxul.so nsBaseAppShell::Run widget/src/xpwidgets/nsBaseAppShell.cpp:198
40 libxul.so nsAppStartup::Run toolkit/components/startup/src/nsAppStartup.cpp:221
41 libxul.so XRE_main toolkit/xre/nsAppRunner.cpp:3788
42 libxul.so Java_org_mozilla_gecko_GeckoAppShell_nativeRun toolkit/xre/nsAndroidStartup.cpp:132
43 libmozutils.so Java_org_mozilla_gecko_GeckoAppShell_nativeRun other-licenses/android/APKOpen.cpp:234
44 libdvm.so libdvm.so@0xec77
45 2 (deleted) 2 @0xc78b7
46 libdvm.so libdvm.so@0xedff
47 libdvm.so libdvm.so@0x35e3a
48 data@app@org.mozilla.fennec.apk@classes.dex data@app@org.mozilla.fennec.apk@classes.dex@0xe057
49 libmozutils.so Java_org_mozilla_gecko_GeckoAppShell_nativeRun other-licenses/android/APKOpen.cpp:234
50 2 (deleted) 2 @0xc78b7
51 libmozutils.so Java_org_mozilla_gecko_GeckoAppShell_nativeRun other-licenses/android/APKOpen.cpp:234
52 libdvm.so libdvm.so@0x3adfc
53 core.odex core.odex@0xbbbaf
54 data@app@org.mozilla.fennec.apk@classes.dex data@app@org.mozilla.fennec.apk@classes.dex@0x8ab9
55 2 (deleted) 2 @0xc78b7
56 libdvm.so libdvm.so@0x1397b
57 libdvm.so libdvm.so@0x3f48c
58 libdvm.so libdvm.so@0x1900f
59 libdvm.so libdvm.so@0x18faf
60 libdvm.so libdvm.so@0x184db
61 data@app@org.mozilla.fennec.apk@classes.dex data@app@org.mozilla.fennec.apk@classes.dex@0x6ceb
62 2 (deleted) 2 @0x7d8e7
63 2 (deleted) 2 @0xd7787
64 libdvm.so libdvm.so@0x4bee6
65 2 (deleted) 2 @0xd7787
66 data@app@org.mozilla.fennec.apk@classes.dex data@app@org.mozilla.fennec.apk@classes.dex@0xdff3
67 libc.so libc.so@0xf047
68 libdvm.so libdvm.so@0x4bf10
69 2 (deleted) 2 @0xd7787
70 libdvm.so libdvm.so@0x3f52c
71 libdvm.so libdvm.so@0x3f48c
72 libc.so libc.so@0xfd93
73 libc.so libc.so@0xf863
Updated•15 years ago
|
Component: General → Canvas: WebGL
Product: Fennec → Core
QA Contact: general → canvas.webgl
| Reporter | ||
Comment 2•15 years ago
|
||
Comment 4•15 years ago
|
||
Comment on attachment 518040 [details] [diff] [review]
check for null
This might be better checked earlier on, but perhaps thats too hard. Please add some documentation about why this might be null.
Attachment #518040 -
Flags: review?(joe) → review+
Updated•15 years ago
|
tracking-fennec: ? → 2.0-
Updated•15 years ago
|
Attachment #518040 -
Flags: approval2.0+
Updated•15 years ago
|
Keywords: checkin-needed
Updated•15 years ago
|
Assignee: nobody → bjacob
Comment 6•15 years ago
|
||
http://hg.mozilla.org/projects/cedar/rev/7b4880769167
Note: qimportbz failed to generate the correct commit message for this bug, and I missed the failure until after I pushed, which caused the changeset to have this commit message: "imported patch 640064" :( :( :( :(
*Please* attach all of your future patches with proper author information and commit messages. It's extremely easy to setup: <https://developer.mozilla.org/en/Mercurial_FAQ#How_can_I_generate_a_patch_for_somebody_else_to_check-in_for_me.3f> Thanks!
Keywords: checkin-needed
Whiteboard: fixed-in-cedar
Comment 7•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-cedar
Target Milestone: --- → mozilla2.2
Updated•14 years ago
|
Crash Signature: [@ libc.so@0x1c25e]
You need to log in
before you can comment on or make changes to this bug.
Description
•