Bug 640064 - crash [@ libc.so@0x1c25e] going to about:support crashes ideos s7; r=jmuizelaar